...
                textStyle = TextStyle(color = Color.Black),
                modifier = Modifier
                    .fillMaxWidth()
                    .shadow(5.dp, CircleShape)
                    .background(Color.White, CircleShape)
                    .padding(horizontal = 20.dp, vertical = 12.dp)
                    .testTag("textField")
                    .onFocusChanged {
                        isHintDisplayed = !it.isFocused
                    },
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Text,
                    imeAction = ImeAction.Search,
...
                friendsViewModel.onEvent(FriendsEvent.UpdateSearch(query))
            },
            shape = CircleShape,
            modifier = Modifier
                .padding(vertical = 12.dp)
                .fillMaxWidth(0.9f)
                .testTag("button")
        ) {
            Icon(
                imageVector = Icons.Filled.Search,
                contentDescription = "Search",
                modifier = Modifier
                    .size(ButtonDefaults.IconSize)
...
