...
                    horizontalArrangement = Arrangement.spacedBy(spacing.extraSmall),
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    Icon(
                        imageVector = if (comment.isLiked) Icons.Rounded.Favorite
                        else Icons.Rounded.FavoriteBorder,
                        contentDescription = "Comment Like",
                        modifier = Modifier.size(spacing.medium)
                    )
                    Text(text = comment.likes.toString(), style = MaterialTheme.typography.body1)
                }
                Spacer(modifier = Modifier.width(spacing.small))
                Row(
...
                        showReplies.value = !showReplies.value
                        if (showReplies.value) {
                            onShowRepliesClick()
                        }
                    }) {
                    Text(
                        text = if (showReplies.value) "Hide replies" else "Show replies",
                        style = MaterialTheme.typography.body1,
                        color = MaterialTheme.colors.onBackground,
                        modifier = Modifier
                            .padding(all = spacing.extraSmall)
                    )
                }
...
                        small = true
                    )
                    Box {
                        BasicTextField(
                            value = reply.value,
                            onValueChange = { reply.value = it },
                            modifier = Modifier.fillMaxWidth().testTag("reply_text_field"),
                            singleLine = true,
                            textStyle = MaterialTheme.typography.body1.copy(
                                color = MaterialTheme.colors.onBackground
                            ),
                            cursorBrush = SolidColor(MaterialTheme.colors.onBackground),
                            keyboardActions = KeyboardActions(
...
