...
import androidx.compose.ui.unit.dp
import ch.proximeety.proximeety.presentation.theme.spacing

@Composable
fun CommentTopBar(numComments: Int, onCloseClick: () -> Unit) {
    val title = "Comments"
    val contentDescription = "Close Comment Section"

    Row(
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.SpaceBetween,
        modifier = Modifier
            .padding(start = spacing.small)
...
